force-app/main/default/objects/Promotion__c/fields/APL_Number__c.field-meta.xml
<CustomField>
    <fullName>APL_Number__c</fullName>
    <description>APL Number</description>
    <inlineHelpText>APL Number</inlineHelpText>
    <label>APL Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>