force-app/main/default/objects/Promotion__c/fields/Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Description__c</fullName>
    <description>Description of choice  when &#39;other&#39; is selected under supplier picklist</description>
    <inlineHelpText>Description of choice  when &#39;other&#39; is selected under supplier picklist</inlineHelpText>
    <label>Other Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>