force-app/main/default/objects/Promotion__c/fields/Print_on_Demand_ID__c.field-meta.xml
<CustomField>
    <fullName>Print_on_Demand_ID__c</fullName>
    <description>Unique ID from print on demand system</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID from print on demand system</inlineHelpText>
    <label>Print on Demand ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>