force-app/main/default/objects/Promotion__c/validationRules/WhenSupplierIsOtherFillOtherText.validationRule-meta.xml
<ValidationRule>
    <fullName>WhenSupplierIsOtherFillOtherText</fullName>
    <active>true</active>
    <description>When supplier is selected as other option, make sure other text is populated</description>
    <errorConditionFormula>TEXT(Supplier__c) ==&#39;Other&#39; &amp;&amp;   ISBLANK(Other_Description__c)</errorConditionFormula>
    <errorMessage>When &#39;Other&#39; option is selected for Supplier field, please fill Other Description field</errorMessage>
</ValidationRule>